<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/widget_toolbar_40dp"></include>

    <com.android.banana.view.LabelTextView
        android:id="@+id/chatRoomName"
        style="@style/group_chat_setting_label"
        android:clickable="false"
        app:label_text_left="@string/group_chat_title"
        tools:text="群聊聊天室" />

    <com.android.banana.view.LabelTextView
        android:id="@+id/chatRoomTheme"
        style="@style/group_chat_setting_label"
        android:clickable="false"
        app:label_text_left="@string/group_chat_theme"
        tools:text="主题" />

    <com.android.banana.view.LabelTextView
        android:id="@+id/chatRoommember"
        style="@style/group_chat_setting_label"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="5dp"
        app:label_text_left="@string/group_chat_member"
        android:onClick="onViewClicked"
        app:line_padding_bottom="0dp"
        tools:text="222222人" />


    <com.android.banana.view.LabelTextView
        android:id="@+id/chatRoomAd"
        style="@style/group_chat_setting_label"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/right_arrow"
        android:gravity="left|center_vertical"
        android:lineSpacingMultiplier="1.5"
        android:minHeight="40dp"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:textColor="#333"
        android:onClick="onViewClicked"
        app:label_padding_right="31dp"
        app:label_text_color_right="#666"
        app:label_text_left="公告"
        app:label_text_right="未设置" />

    <com.android.banana.view.LabelTextView
        android:id="@+id/chatRoomSpeak"
        style="@style/group_chat_setting_label"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="5dp"
        android:visibility="gone"
        app:label_text_color_left="#333"
        app:label_text_left="@string/group_chat_setting_speak"
        android:onClick="onViewClicked"
        android:clickable="true"
        tools:text="" />

    <com.android.banana.view.LabelTextView
        android:id="@+id/chatRoomForbidden"
        style="@style/group_chat_setting_label"
        android:drawableRight="@drawable/right_arrow"
        android:paddingRight="5dp"
        android:visibility="gone"
        android:onClick="onViewClicked"
        app:label_text_left="@string/group_chat_setting_forbidden" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/chatRoomMsgTop"
            style="@style/group_chat_setting_label"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center_vertical"
            android:textColor="#333"
            android:text="@string/group_chat_setting_msgtop" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:onClick="onStickyClick"
            android:background="@drawable/selector_main_check_box"
            android:button="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:backgroundTint="@color/line_color"></View>


    <TextView
        android:id="@+id/exit_chat_room"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/selector_group_chat_red"
        android:clickable="true"
        android:onClick="exitChatRoom"
        android:gravity="center"
        android:text="@string/exit_chat_room"
        android:textColor="@color/white" />
</LinearLayout>