<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/widget_toolbar_40dp"></include>

    <TextView
        android:id="@+id/createGroupTipTv"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#ebfbff"
        android:drawableLeft="@drawable/ic_notice"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:text="@string/family_creat_tip"
        android:textColor="#828282" />

    <FrameLayout
        android:id="@+id/cover_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_creat_group" />

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avart_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/family_avart" />

            <ImageView
                android:id="@+id/family_action_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:padding="@dimen/dp5"
                android:src="@drawable/family_action_camera" />
        </RelativeLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_image"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/com_gray_color"
            android:textSize="@dimen/sp14" />

        <EditText
            android:id="@+id/verify_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@color/transparent"
            android:hint="@string/please_input_family_name_must"
            android:imeOptions="actionNext"
            android:maxLength="10"
            android:paddingBottom="@dimen/dp10"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/com_gray_color"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_color"></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_image"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_description"
            android:textColor="@color/com_gray_color"
            android:textSize="@dimen/sp14" />

        <EditText
            android:id="@+id/family_description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@color/transparent"
            android:hint="@string/please_input_family_descrition"
            android:imeOptions="actionDone"
            android:maxLength="80"
            android:paddingBottom="@dimen/dp10"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/com_gray_color"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/input_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_color"></View>

    <LinearLayout
        android:id="@+id/group_shirt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family_fight_shirt"
            android:textColor="@color/com_gray_color"
            android:textSize="@dimen/sp14" />

        <EditText
            android:id="@+id/verify_shirt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:background="@color/transparent"
            android:hint="@string/family_fight_shirt_description"
            android:imeOptions="actionNext"
            android:maxLength="4"
            android:paddingBottom="@dimen/dp10"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/com_gray_color"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_color"></View>

</LinearLayout>